testsuite/tests/ghc-regress/rename/should_fail/T2310.hs
{-# OPTIONS_GHC -XScopedTypeVariables -XPatternSignatures #-}

module Foo where

foo = let c = \ x :: a -> (x :: a) in co
